# cw-halo2

./: Cargo.toml  justfile
.cargo/: config
contracts/cw-halo2-verifier/: Cargo.toml
contracts/cw-halo2-verifier/src/: contract.rs  error.rs  lib.rs
src/: bin.rs  error.rs  fs.rs  lib.rs
test_data/: p.proof
