[package]
name = "cosmwasm-halo2"
version = "0.1.0"
edition = "2021"
authors = ["whalelephant <email-me@belsy.space>"]


[lib]
name = "cw_halo2_verifier"
path = "src/lib.rs"

[[bin]]
name = "cw_halo2_bin"
path = "src/bin.rs"

[dependencies]
# noir_halo2_backend_pse = { git = "https://github.com/Ethan-000/halo2_backend", branch = "0.1.2" }
# noir_halo2_backend_common = { git = "https://github.com/Ethan-000/halo2_backend", branch = "0.1.2" }
noir_halo2_backend_pse = { path = "../halo2_backend/crates/noir_halo2_backend_pse"}
noir_halo2_backend_common= { path = "../halo2_backend/crates/noir_halo2_backend_common"}
acvm = "0.15.0"
pse_halo2wrong = { git = "https://github.com/privacy-scaling-explorations/halo2wrong", package = "halo2wrong", tag = "v2023_04_20", features = [
    "circuit-params",
] }
nargo_halo2 = { git = " https://github.com/Ethan-000/noir", branch = "demo-0.1.2", package = "nargo"}
noirc_abi = { git = " https://github.com/Ethan-000/noir", branch = "demo-0.1.2" }
serde = { version = "1.0.136", features = ["derive"] }
serde_json = "1.0"
hex = "0.4.2"
