[workspace]
members = ["packages/*", "contracts/cw-halo2-verifier"]

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["whalelephant <email-me@belsy.space>"]
repository = "https://github.com/whalelephant/cw-halo2" 
keywords = ["cosmwasm", "halo2", "pse"] 

[workspace.dependencies]
cosmwasm-schema = "1.2"
cw-utils = "1"
cw-storage-plus = "1.1"
cosmwasm-std = "1.2"
cw2 = "1.0"
thiserror = "1"

[profile.release.package.cw-halo2-verifier]
codegen-units = 1
incremental = false

[profile.release]
rpath = false
lto = true
overflow-checks = true
opt-level = 3
debug = false
debug-assertions = false

